# GoogleTest_Example

./: CMakeLists.txt
.github/workflows/: ci.yml
inc/: calculator.h
src/: calculator.cpp
tests/: calculator_test.cpp
